--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,7 @@ nltk==3.8.1
 sentence_transformers
 InstructorEmbedding==1.0.0
 huggingface-hub==0.16.4
-ibm-watson-machine-learning
+ibm-watson-machine-learning>=1.0.320
 torch==2.0.1
+langchain
+pydantic>=1.10.0
